# building-code-linguistic-analysis

./: .gitignore  AGENTS.md  Makefile  PROJECT_STATUS_CHECKLIST.md  README.md  enhanced-repo-structure.md  main.py  pyproject.toml
apps/: 01_md_exploration.py  02_ner_prototyping.py  03_classifier_training.py  04_rule_extraction_demo.py  05_error_analysis.py  Home.py
data/01_raw/: SBC-201-2007.md
data/02_curated/sbc_201_2007/: chapter_01_definitions.md  chapter_02_use_and_occupancy_classification.md  chapter_03_general_building_heights_and_areas.md  chapter_04_types_of_construction.md  chapter_05_exterior_walls.md  chapter_06_roof_assemblies_and_rooftop_structures.md  (+10 more)
data/04_processed/: corpus_statistics.json  rules.jsonl  rules_legalruleml.xml  workflow_stats.json
domain/: deontic_patterns.yaml  entity_types.yaml
notebooks/: 01_md_exploration.ipynb  02_ner_prototyping.ipynb
scripts/: assess_workflow.py  corpus_statistics.py  curate_raw_markdown.py  run_full_workflow.py
src/classification/: deontic_detector.py  provision_type.py  sentence_classifier.py
src/export/: to_json.py  to_legalruleml.py
src/nlp_pipeline/: coreference.py  dependency_parser.py  ner.py  tokenizer.py
src/preprocessing/: cross_ref_resolver.py  md_parser.py  normalizer.py  section_splitter.py
src/rule_extraction/: ambiguity_flagger.py  condition_parser.py  confidence_scorer.py  constraint_builder.py  semantic_roles.py
tests/: conftest.py  test_classification.py  test_export.py  test_integration.py  test_nlp_pipeline.py  test_preprocessing.py  test_rule_extraction.py
